# northcloud-oculus

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  build.rs
assets/fonts/: README.md
docs/: PRODUCTION_REDIS.md
docs/plans/: 2026-02-22-quest3-support-design.md  2026-02-22-quest3-support-plan.md  2026-02-22-vr-scaffold-design.md  2026-02-22-vr-scaffold-plan.md  2026-02-28-grafana-bridge-design.md  2026-02-28-grafana-bridge-plan.md
scripts/: fetch-openxr-loader.ps1  tunnel-production-redis.ps1
shaders/: diagram.frag  diagram.vert  fullscreen.vert  solid.frag
src/: lib.rs  main.rs  redis_feed.rs  text_texture.rs  xr_math.rs
src/data/: grafana.rs  loki.rs  mod.rs  node_status.rs  prometheus.rs
src/interaction/: controller.rs  events.rs  mod.rs  raycast.rs
src/node_marker/: animation.rs  materials.rs  mod.rs
src/panels/: classifier_panel.rs  detail_panel.rs  frontier_panel.rs  map_panel.rs  mod.rs
src/world_panel/: egui.rs  mod.rs  render.rs  systems.rs
