[package]
name = "northcloud-oculus"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
bevy = "0.18"
bevy_mod_xr = "0.5"
bevy_mod_openxr = { version = "0.5", features = ["vulkan"] }
openxr = "0.21"

# UI rendering
bevy_egui = "0.39"

# VR interaction
bevy_xr_utils = "0.5"

# Data ingestion
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
urlencoding = "2.1"
